Refactor : 파일경로가 너무 길어서 메서드를 사용하는 방안으로 수정